--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,10 @@
     "react-select": "^5.10.0",
     "react-table": "^7.8.0",
     "tailwind-merge": "^2.6.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "lucide-react": "^0.344.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
