--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@aws-sdk/client-dynamodb": "^3.758.0",
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/client-sagemaker": "^3.760.0",
+    "@aws-sdk/client-sagemaker-a2i-runtime": "^3.758.0",
     "@aws-sdk/client-ses": "^3.758.0",
     "@aws-sdk/client-textract": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
@@ -26,6 +27,7 @@
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "formidable": "^3.5.2",
+    "framer-motion": "^11.0.8",
     "jsvectormap": "^1.6.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
@@ -36,6 +38,7 @@
     "react-day-picker": "^9.6.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
+    "react-focus-lock": "^2.11.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
