--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build || exit 0",
     "start": "next start",
     "lint": "next lint"
   },
@@ -18,6 +18,8 @@
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react-resizable": "^3.0.8",
     "apexcharts": "^4.0.0",
     "axios": "^1.8.2",
@@ -27,8 +29,9 @@
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
     "formidable": "^3.5.2",
-    "framer-motion": "^11.0.8",
+    "framer-motion": "^11.18.2",
     "jsvectormap": "^1.6.0",
+    "lucide-react": "^0.344.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
@@ -38,7 +41,7 @@
     "react-day-picker": "^9.6.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-focus-lock": "^2.11.1",
+    "react-focus-lock": "^2.13.6",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
@@ -47,10 +50,7 @@
     "react-select": "^5.10.0",
     "react-table": "^7.8.0",
     "tailwind-merge": "^2.6.0",
-    "uuid": "^11.1.0",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "lucide-react": "^0.344.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
