--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
@@ -49,6 +50,7 @@
     "react-resizable": "^3.0.5",
     "react-select": "^5.10.0",
     "react-table": "^7.8.0",
+    "rimraf": "^6.0.1",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.1.0"
   },
