--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,9 @@
 {
   "env": {
-    "TEMP": "/tmp"
+    "TEMP": "/tmp",
+    "NEXT_TELEMETRY_DISABLED": "1", 
+    "NODE_OPTIONS": "--max_old_space_size=4096"
   },
-  "buildCommand": "npm run build"
+  "buildCommand": "mkdir -p temp && TEMP=/tmp next build",
+  "outputDirectory": ".next"
 } 
