--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS='--max_old_space_size=4096' next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "mkdir -p temp"
+    "clean": "rimraf .next dist",
+    "prebuild": "mkdir -p temp dist && rimraf .next dist"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.758.0",
@@ -26,6 +27,7 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "flatpickr": "^4.6.13",
@@ -50,6 +52,7 @@
     "react-resizable": "^3.0.5",
     "react-select": "^5.10.0",
     "react-table": "^7.8.0",
+    "rimraf": "^5.0.5",
     "tailwind-merge": "^2.6.0",
     "uuid": "^11.1.0"
   },
