--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,21 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/next" }
+    { 
+      "src": "frontend/package.json", 
+      "use": "@vercel/next",
+      "config": {
+        "buildCommand": "cd frontend && mkdir -p temp && TEMP=/tmp next build",
+        "outputDirectory": "frontend/.next"
+      }
+    }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/frontend/$1" }
-  ]
+  ],
+  "env": {
+    "TEMP": "/tmp",
+    "NEXT_TELEMETRY_DISABLED": "1",
+    "NODE_OPTIONS": "--max_old_space_size=4096"
+  }
 } 
