Revert to original working configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { 
-      "src": "frontend/package.json", 
-      "use": "@vercel/next",
-      "config": {
-        "buildCommand": "cd frontend && mkdir -p temp && SKIP_DEPLOY_CHECK=1 TEMP=/tmp next build && cd .next/server && mkdir -p app/\\(home\\) && touch app/\\(home\\)/page_client-reference-manifest.js",
-        "outputDirectory": "frontend/.next"
-      }
-    }
+    { "src": "frontend/package.json", "use": "@vercel/next" }
   ],
   "routes": [
     { "src": "/(.*)", "dest": "/frontend/$1" }
-  ],
-  "env": {
-    "TEMP": "/tmp",
-    "NEXT_TELEMETRY_DISABLED": "1",
-    "NODE_OPTIONS": "--max_old_space_size=4096",
-    "SKIP_DEPLOY_CHECK": "1"
-  }
+  ]
 } 
