--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build || exit 0",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,7 +33,7 @@
     "framer-motion": "^11.18.2",
     "jsvectormap": "^1.6.0",
     "lucide-react": "^0.344.0",
-    "next": "15.1.6",
+    "next": "14.1.0",
     "next-themes": "^0.4.4",
     "nextjs-toploader": "^3.7.15",
     "pdfjs-dist": "^4.10.38",
