--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,8 @@
 {
   "version": 2,
+  "buildCommand": "cd frontend && yarn install && yarn build",
+  "outputDirectory": "frontend/.next",
+  "framework": "nextjs",
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" }
   ],
