Revert "fix: resolve build issues with temp directory and AWS credential checks"
This reverts commit fdb4c1e1495d8f4571f0430217dedc5fb37d278c.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "cross-env TEMP=./temp next build",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "clean": "rimraf .next dist temp",
-    "prebuild": "yarn clean"
+    "lint": "next lint"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.758.0",
