--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && yarn install && yarn clean && cross-env TEMP=./temp yarn build",
+  "buildCommand": "cd frontend && yarn install && yarn build",
   "outputDirectory": "frontend/.next",
   "framework": "nextjs",
   "env": {
     "NEXT_PUBLIC_AWS_REGION": "ap-southeast-2",
-    "NEXT_PUBLIC_S3_INVOICE_BUCKET": "pcpanel",
-    "TEMP": "./temp"
+    "NEXT_PUBLIC_S3_INVOICE_BUCKET": "pcpanel"
   },
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" }
