--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && yarn install && yarn build",
+  "buildCommand": "cd frontend && yarn install && yarn clean && NEXT_TELEMETRY_DISABLED=1 yarn build",
   "outputDirectory": "frontend/.next",
   "framework": "nextjs",
   "env": {
     "NEXT_PUBLIC_AWS_REGION": "ap-southeast-2",
-    "NEXT_PUBLICS3_INVOICE_BUCKET": "pcpanel"
+    "NEXT_PUBLIC_S3_INVOICE_BUCKET": "pcpanel",
+    "TEMP": "./temp",
+    "NEXT_TELEMETRY_DISABLED": "1"
   },
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" }
